--- a/frontend/src/styles/LoginPages/Login.css
+++ b/frontend/src/styles/LoginPages/Login.css
@@ -93,7 +93,8 @@
 
 @media screen and (max-width: 1200px) {
     .login-top {
-        padding-top: 13%;
+        padding-top: 10%;
+        height: 35vh;
     }
 
     .login-wrapper {
@@ -105,6 +106,11 @@
    
     .login-wrapper {
         width: 100%;
+    }
+    .login-top{
+        height: 25vh;
+        padding-top: 10%;
+        
     }
 }
 
@@ -121,16 +127,11 @@
     }
 
     .login-top{
-        padding-top: 15%;
+        padding-top: 11%;
     }
 }
 
-@media screen and (max-width: 900px) {
-   
-    .login-top {
-        padding-top: 20%;
-    }
-}
+
 
 @media screen and (max-width: 550px) {
    
@@ -147,13 +148,17 @@
     .forgot-password__link{
         margin: 30px 0;
     }
+
+    .login-top{
+        padding-top: 15%;
+    }
 }
 
 @media screen and (max-width: 400px) {
    
 
     .login-top {
-        padding-top: 30%;
+        padding-top: 22%;
         
     }
 }
