disable button in navbar and featured

--- a/frontend/src/styles/HomeSections/FeaturedProducts.css
+++ b/frontend/src/styles/HomeSections/FeaturedProducts.css
@@ -123,6 +123,9 @@ img {
     color: #b0976d;
 }
 
+#disable-button:hover + #hover-text {
+    display: block;
+  }
 
 @media screen and (max-width: 1200px) {
 
